--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "yarn": "please use npm"
   },
   "dependencies": {
-    "@dcl/ecs-scene-utils": "^1.7.5"
+    "@dcl/ecs-scene-utils": "^1.7.5",
+    "@dcl/npc-scene-utils": "^1.5.1"
   },
   "bundledDependencies": [
     "@dcl/ecs-scene-utils"
+  ],
+  "bundleDependencies": [
+    "@dcl/ecs-scene-utils",
+    "@dcl/npc-scene-utils"
   ]
 }
