add floor assets

--- a/package.json
+++ b/package.json
@@ -25,11 +25,8 @@
     "@dcl/ecs-scene-utils": "^1.7.5",
     "@dcl/npc-scene-utils": "^1.5.1"
   },
-  "bundledDependencies": [
-    "@dcl/ecs-scene-utils"
-  ],
   "bundleDependencies": [
-    "@dcl/ecs-scene-utils",
-    "@dcl/npc-scene-utils"
+    "@dcl/npc-scene-utils",
+    "@dcl/ecs-scene-utils"
   ]
 }
